--- a/bower.json
+++ b/bower.json
@@ -19,9 +19,13 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "~1.2.18"
+    "angular": "1.2.20",
+    "angular-mocks": "1.2.20"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.18"
+  },
+  "resolutions": {
+    "angular": "1.2.20"
   }
 }
